<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Reddit News</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="auth_fail">Cannot obtain authorise token</string>
    <string name="example_user">Example User</string>
    <string name="connect_please">Device must be connect to Internet</string>
    <string name="info">Information</string>
    <string name="open_avaible_wifi">Open WiFi Setting</string>
    <string name="news_iv">News ImageView</string>
    <string name="display_author">by %1$s</string>
    <string name="btn_userless">Run without login</string>
    <string name="btn_login">Login</string>
    <string name="actv_hint">Search subreddits</string>

    <!--NaviDraver menu-->
    <string name="drawer_hot">Hot</string>
    <string name="drawer_new">New</string>
    <string name="drawer_rising">Rising</string>
    <string name="drawer_controversial">Controversial</string>
    <string name="drawer_top">Top</string>

    <string name="toolbar_subreddit_title">#%1$s</string>
    <string name="search_menu">Search Menu</string>
    <string name="show_comments_list">Show comments list</string>

    <string name="display_comment_zero">No comment</string>
    <string name="drawer_subscribe_list">Your Subreddits List</string>
    <string name="display_comment_count">%1$d comments</string>
    <string name="show_more_comments">Show more comments</string>
    <string name="no_comment_to_display">No comments to display</string>
    <string name="comment_fetch_fail">Cannot load comments due server connection</string>
    <string name="show_comments_description">Show news comments</string>
    <string name="comment_menu">Show comments</string>
    <string name="title_activity_detail">News Details</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_subscribed_list">Your Subreddits List</string>
    <string name="comment_author_and_time">&lt;b>%1$s&lt;/b> wrote &lt;i>%2$s&lt;/i></string>
    <string name="show_more">Show More Comments</string>
    <string name="show_less">Show Less Comments</string>
    <string name="connection_lost">Please check your internet connection</string>
    <string name="title_activity_base">Reddit News</string>

</resources>
