<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rl_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?android:attr/selectableItemBackground"
    android:clickable="true">

    <ImageView
        android:id="@+id/iv_thumb_news"
        android:layout_width="@dimen/thumb_width"
        android:layout_height="@dimen/thumb_height"
        android:layout_centerVertical="true"
        android:layout_margin="@dimen/thumb_margin"
        android:contentDescription="@string/news_iv" />

    <TextView
        android:id="@+id/tv_news_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="@dimen/margin_title_left"
        android:layout_marginRight="@dimen/margin_title_right"
        android:layout_toEndOf="@+id/iv_thumb_news"
        android:layout_toRightOf="@+id/iv_thumb_news"
        android:maxLines="2"
        android:textSize="@dimen/news"
        tools:text="@string/hello_blank_fragment" />

    <TextView
        android:id="@+id/tv_news_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/iv_thumb_news"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="@dimen/author_margin_right"
        android:text="@string/example_user"
        android:textColor="@color/secondary_text"
        android:textSize="@dimen/middle_text_size" />

    <TextView
        android:id="@+id/tv_news_comment_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tv_news_title"
        android:layout_alignStart="@+id/tv_news_title"
        android:layout_alignTop="@+id/tv_news_author"
        tools:text="0 Comments" />

</RelativeLayout>